pyilper (1.8.8) bookworm; urgency=medium

  * online manual reformatted 
  * PyPi packaging optimized

 -- bookworm <achim@trillian>  Wed, 17 Jan 2024 15:27:49 +0100

pyilper (1.8.7) bookworm; urgency=medium

  * 1.8.7 release 
  * fixed cursor width problem which was detected on DEBIAN bookworm

 -- focal <achim@trillian>  Sat, 26 Aug 2023 19:09:22 +0200

pyilper (1.8.7a1) bullseye; urgency=medium

  * 1.8.7 alpha1
  * HP82162A improvements 

 -- focal <achim@trillian>  Sun, 29 Jan 2023 10:53:48 +0100

pyilper (1.8.6) bullseye; urgency=medium

  * 1.8.6 release 

 -- focal <achim@trillian>  Thu, 20 Oct 2022 12:39:09 +0200

pyilper (1.8.6~beta2) bullseye; urgency=medium

  * enabled PySide6 language binding in addition to PyQt5
  * tty device selection combo box improved 

 -- focal <achim@trillian>  Fri, 29 Jul 2022 14:09:44 +0200

pyilper (1.8.6~beta1) focal; urgency=medium

  * remove deprecated language features which are errors under Python 3.10
  * improve shutdown of plotter subprocess
  * enable python 3.10

 -- focal <achim@trillian>  Sat, 16 Apr 2022 20:47:12 +0200

pyilper (1.8.5) focal; urgency=medium

  * release version 

 -- focal <achim@trillian>  Mon, 17 Jan 2022 13:40:14 +0100

pyilper (1.8.5~beta1) focal; urgency=medium

  * beta version
  * new virtual raw drive device tab added
  * fixed crash when pasting text in the terminal
  * configuration file version check on startup
  * tab title text color problem (macOS Big Sur) fixed
  * pyILPER command line parameters documented in online manual
  * new function to exchange config files between devel/beta and production versions (start with command line parameter)

 -- focal <achim@trillian>  Sun, 28 Nov 2021 20:38:03 +0100

pyilper (1.8.4) focal; urgency=medium

  * Plotter Tab: activate ENTER key after having digitized or entered a coordinate

 -- bionic <achim@trillian>  Tue, 02 Mar 2021 09:13:34 +0100

pyilper (1.8.3) bionic; urgency=medium
