@@ -372,6 +372,8 @@ coordinate</li>
 <h3 class="w3-text-teal">pyILPER 1.8.8</h3>
 <ul class="w3-ul">
 <li>HTML reformatting of online documentation.</li>
+<li>Fixed some Pyside6 deprecation warnings.</li>
+<li>Forced plotter background color to be always white.</li>
 </ul>
 <!-- End content -->
 </div>
