@@ -78,6 +78,8 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif;}
 
 <ul class="w3-ul">
 <li>HTML reformatting of online documentation.</li>
+<li>Fixed some Pyside6 deprecation warnings.</li>
+<li>Force plotter background color to be always white.</li>
 </ul>
 <!-- End content -->
 </div>
